syntax = "proto3";
package health;
import "google/protobuf/empty.proto";

service Health {
  rpc IsAlive(google.protobuf.Empty) returns (IsAliveResponse);
}

service Echo {
  rpc EchoMessage(EchoRequest) returns (EchoResponse);

  rpc EchoStream(stream EchoRequest) returns (stream EchoResponse);
}

message IsAliveResponse {
  string message = 1;
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}
